--- a/assets/styles/utilities/_align.css
+++ b/assets/styles/utilities/_align.css
@@ -11,9 +11,13 @@
 .alignnone,
 .aligncenter {
 	float: none;
+}
+
+.alignnone {
 	margin: 0.3125rem 0 1.25rem;
 }
 
 .aligncenter {
 	display: block;
+	margin: 0.3125rem auto 1.25rem;
 }
