Update starting stylesheets

--- a/assets/styles/elements/_document.css
+++ b/assets/styles/elements/_document.css
@@ -8,6 +8,6 @@ body {
 	font-size: var(--font-size-base);
 	line-height: var(--line-height-base);
 	color: var(--color-black);
-	min-width: 320px;
+	min-width: 20rem;
 	background-color: var(--color-white);
 }
