--- a/assets/styles/tools/_chevron.css
+++ b/assets/styles/tools/_chevron.css
@@ -1,4 +1,4 @@
-@define-mixin chevron $dimensions: 14px,
+@define-mixin chevron $dimensions: 1rem,
 	$borderWidth: 0 0 1px 1px,
 	$borderColor: currentColor,
 	$margin: auto,
