--- a/assets/styles/settings/_text.css
+++ b/assets/styles/settings/_text.css
@@ -1,11 +1,10 @@
+/* Text Variables */
 :root {
 	--font-sans-serif: sans-serif;
 	--font-serif: serif;
 	--font-monospace: monospace;
-
 	--font-size-base: 1rem;
 	--line-height-base: 1.35;
-
 	--font-size-h1: 2rem;
 	--font-size-h2: 1.75rem;
 	--font-size-h3: 1.5rem;
