--- a/assets/styles/tools/_flexbox.css
+++ b/assets/styles/tools/_flexbox.css
@@ -1,17 +1,20 @@
-@define-mixin flex $align, $justify {
+/* Flexbox Mixins */
+
+/* prettier-ignore */
+@define-mixin flex $align, $justify { /* stylelint-disable-line */
 	display: flex;
 	align-items: $align;
 	justify-content: $justify;
 }
 
-@define-mixin flex-row $wrap: wrap, $align: stretch, $justify: space-between {
-	@mixin flex $align, $justify;
+/* prettier-ignore */
+@define-mixin flex-row $wrap: wrap, $align: stretch, $justify: space-between { /* stylelint-disable-line */
 	flex-flow: row $wrap;
+	@mixin flex $align, $justify; /* stylelint-disable-line */
 }
 
-@define-mixin flex-column $wrap: nowrap,
-	$align: stretch,
-	$justify: space-between {
-	@mixin flex $align, $justify;
+/* prettier-ignore */
+@define-mixin flex-column $wrap: nowrap, $align: stretch, $justify: space-between { /* stylelint-disable-line */
 	flex-flow: column $wrap;
+	@mixin flex $align, $justify; /* stylelint-disable-line */
 }
