--- a/assets/styles/generic/_form_elements.css
+++ b/assets/styles/generic/_form_elements.css
@@ -1,3 +1,4 @@
+/* Form Elements */
 fieldset {
 	padding: 0;
 }
@@ -17,12 +18,6 @@ input[disabled],
 textarea[disabled],
 select[disabled] {
 	cursor: default;
-}
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-	padding: 0;
-	border: 0;
 }
 
 input[type='text'],
@@ -51,7 +46,6 @@ input[type='search']::-webkit-search-decoration {
 textarea {
 	overflow: auto;
 	-webkit-overflow-scrolling: touch;
-	overflow-scrolling: touch;
 }
 
 button,
@@ -64,13 +58,18 @@ textarea {
 	color: inherit;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
-	font-smoothing: antialiased;
 	text-rendering: optimizeLegibility;
 }
 
 button,
 select {
 	text-transform: none;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+	padding: 0;
+	border: 0;
 }
 
 input::placeholder {
@@ -85,5 +84,5 @@ textarea::placeholder {
 
 input:-webkit-autofill {
 	-webkit-text-fill-color: inherit;
-	-webkit-box-shadow: 0 0 0 62.5rem var(--color-white) inset;
+	box-shadow: 0 0 0 62.5rem var(--color-white) inset;
 }
