--- a/assets/styles/tools/_chevron.css
+++ b/assets/styles/tools/_chevron.css
@@ -1,16 +1,18 @@
-@define-mixin chevron $dimensions: 1rem,
-	$borderWidth: 0 0 1px 1px,
-	$borderColor: currentColor,
-	$margin: auto,
-	$rotation: 45deg {
+/*
+Chevron Mixin
+@usage: @mixin chevron 2rem, 0 0 1px 1px, $color-black, -5px 0 0 0.5em, -135deg;
+*/
+
+/* prettier-ignore */
+@define-mixin chevron $dimensions: 1rem, $border-width: 0 0 1px 1px, $border-color: currentColor, $margin: auto, $rotation: 45deg { /* stylelint-disable-line */
 	content: '';
 	width: $dimensions;
 	height: $dimensions;
 	display: inline-block;
 	vertical-align: middle;
-	border-width: $borderWidth;
+	border-width: $border-width;
 	border-style: solid;
-	border-color: $borderColor;
+	border-color: $border-color;
 	margin: $margin;
 	transform: rotate($rotation);
 	transform-origin: 50% 50%;
