--- a/assets/styles/tools/_media-queries.css
+++ b/assets/styles/tools/_media-queries.css
@@ -1,3 +1,4 @@
+/* Custom Media Queries */
 @custom-media --small-desktop (max-width: 1439px);
 @custom-media --desktop-only (min-width: 1279px);
 @custom-media --tablet-landscape (max-width: 1279px);
@@ -5,7 +6,6 @@
 @custom-media --tablet-portrait (max-width: 1023px);
 @custom-media --tablet-portrait-only (min-width: 767px) and (max-width: 1023px);
 @custom-media --mobile (max-width: 767px);
-@custom-media --hover ((-ms-high-contrast: none),
-	(-ms-high-contrast: active),
-	(-moz-touch-enabled: 0),
-	(hover));
+
+/* prettier-ignore */
+@custom-media --hover ((-ms-high-contrast: none), (-ms-high-contrast: active), (-moz-touch-enabled: 0), (hover));
