--- a/assets/styles/tools/_mixins.css
+++ b/assets/styles/tools/_mixins.css
@@ -1,4 +1,7 @@
-@define-mixin centered {
+/* Mixin for centering elements with known dimensions (or images) */
+
+/* prettier-ignore */
+@define-mixin centered { /* stylelint-disable-line */
 	position: absolute;
 	top: 0;
 	right: 0;
