--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,23 +1,5 @@
+/* External dependencies */
+@import 'itcss';
+
 /* Sprite */
 @import '_sprite.css';
-
-/* Settings */
-@import 'settings/**/*.css';
-
-/* Tools */
-@import 'tools/**/*.css';
-
-/* Generic */
-@import 'generic/**/*.css';
-
-/* Elements */
-@import 'elements/**/*.css';
-
-/* Objects */
-@import 'objects/**/*.css';
-
-/* Utilities */
-@import 'utilities/**/*.css';
-
-/* Components */
-@import 'components/**/*.css';
